Styles: Ensure post title is black, and set an aspect ratio on images to prevent layout shift.

--- a/source/wp-content/themes/wporg-themes-2024/style.css
+++ b/source/wp-content/themes/wporg-themes-2024/style.css
@@ -33,3 +33,8 @@
 	border-radius: 2px;
 	box-shadow: 0 0 0 1.5px var(--wp--custom--link--color--text);
 }
+
+/* Add an aspect-ratio to prevent layout shift. */
+.wp-block-query .wp-block-post-featured-image {
+	aspect-ratio: 4/3;
+}
